# apta-research

./: .gitignore  LICENSE  README.md  pyproject.toml
apta_research/cascade/: base.py  cascade.py
apta_research/cascade/prompts/: big.yaml  small.yaml
apta_research/common/: base.py  config.py  llm.py
